fixed name spacing when not wrapping

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -40,9 +40,12 @@
 }
 
 #header .optionalText {
+  display: flex;
   flex-basis: 7vw;
   font-size: 1.75vh;
   overflow: auto;
+  justify-content: center;
+  align-items: center;
 
 }
 
